--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -9,7 +9,7 @@
         title="Color key" />
     <tab
         id="@+id/tab_about"
-        title="Friends" />
+        title="About" />
     <tab
         id="@+id/tab_directions"
         title="Directions" />
