--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,18 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.com.bead.BlankFragment">
 
-    <FrameLayout
-        android:id="@+id/major"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-    </FrameLayout>
-
-    <!--
+        android:text="Will this work" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,12 +20,5 @@
             android:text="CycleBeads\n   Welcome"
             android:textColor="@drawable/bead_bg_notsafe"/>
     </FrameLayout>
-    -->
 
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_alignParentBottom="true"
-        app:bb_tabXmlResource="@xml/bottombar_tabs" />
-</RelativeLayout>
+</FrameLayout>
