--- a/app/src/main/res/drawable/bead_bg_notsafe.xml
+++ b/app/src/main/res/drawable/bead_bg_notsafe.xml
@@ -4,7 +4,7 @@
     <shape android:shape="rectangle"  >
         <corners android:radius="50dip" />
         <stroke android:width="1dip" android:color="#667162" />
-        <gradient android:angle="-90" android:startColor="#FF0000" android:endColor="#444444" />
+        <gradient android:angle="-90" android:startColor="#FF0000" android:endColor="#FF0000" />
     </shape>
 </item>
 </selector>
