--- a/app/src/main/res/drawable/bead_bg_safe.xml
+++ b/app/src/main/res/drawable/bead_bg_safe.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="50dip" />
             <stroke android:width="1dip" android:color="#667162" />
-            <gradient android:angle="-90" android:startColor="#aaaaaa" android:endColor="#ffffff" />
+            <gradient android:angle="-90" android:startColor="#D48E35" android:endColor="#D48E35" />
         </shape>
     </item>
 </selector>
