--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -8,7 +8,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Will this work" />
+        android:text="Welcome"
+        android:textColor="@color/colorUnlikey"
+        android:gravity="center_horizontal"
+        android:textSize="35sp"
+        android:fontFamily="serif-monospace"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,8 +21,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="CycleBeads\n   Welcome"
-            android:textColor="@drawable/bead_bg_notsafe"/>
+            android:text="@string/main_welcome"
+            android:textColor="@color/colorUnlikey"
+            android:textAlignment="center"/>
     </FrameLayout>
 
 </FrameLayout>
